@@ -2,12 +2,21 @@ MOPSIM
 =======
 MOPSim - Agent-based network traffic simulator, focused on rest areas (MOP) usage analysis.
 ## Usage
+To install maven:
+```sudo apt-get install default-jdk```
+```sudo apt install maven```
+
+To compile:
+```mvn compile```
+
+To increase heapsize (necessary for large simulations):
+```export MAVEN_OPTS="-Xmx6g -XX:MaxPermSize=512m"```
+(Xmx can be set accordingly to hardware memory size)
+
 To run:
-1. Clone from [repository](https://github.com/mopsy-team/Mopsim.git).
-2. Download matsim 0.9.0 core library from [here](https://github.com/matsim-org/matsim/releases/download/matsim-0.9.0/matsim-0.9.0.zip).
-3. Extract the library.
-4. To compile and run MOPSim, execute run_mopsim.sh script with path to matsim-0.9.0.jar file as a parameter. Example usage:
-```
-./run_mopsim.sh matsim-0.9.0/matsim-0.9.0.jar
-```
-5. After execution, directory ```output``` will contain simulation data.
+```mvn exec:java```
+
+To configure:
+Edit ```src/main/CONF/config.xml``` file.
+
+Expect output data in ```src/main/SIMULATIONS directory.```
